--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 domain: lathroplabs.github.io
-baseurl: "/predictionLabsDocs/" # the subpath of your site, e.g. /blog
+baseurl: "/predictionLabsDocs" # the subpath of your site, e.g. /blog
 url: "https://lathroplabs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
 github_username:  lathroplabs
+search_enabled: true
 
 # Build settings
 remote_theme: pmarsceill/just-the-docs
