--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Prediction Labs Documentation
 email: support@predictionlaboratory.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Documentation for the Prediction Laboratory.
 domain: lathroplabs.github.io
 baseurl: "/predictionLabsDocs" # the subpath of your site, e.g. /blog
 url: "https://lathroplabs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
