--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ github_username:  lathroplabs
 search_enabled: true
 
 # Build settings
-remote_theme: pmarsceill/just-the-docs
+#remote_theme: pmarsceill/just-the-docs
+theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
